Removed google/apiclient dependecy Added functions documentation, project logo and IGNORE_COLUMNS Now, when waiting for a batch, we request from MySQL the next rows Added --database-name option

--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,5 @@ DB_DATABASE_NAME=medicine
 DB_USERNAME=mysql_user
 DB_PASSWORD=secret
 DB_HOST=mysql-server
-DB_DRIVER=pdo_mysql
+
+IGNORE_COLUMNS=password,hidden_column,another_column
