--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "symfony/console": "^3.1",
         "vlucas/phpdotenv": "^2.4",
         "php-di/php-di": "^5.4",
-        "google/apiclient": "^2.0",
         "google/cloud": "^0.11.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "facile-it/doctrine-mysql-come-back": "^1.6"
     },
     "autoload": {
         "psr-4": {
