Added custom port to mysql connection param

--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,6 @@ DB_DATABASE_NAME=medicine
 DB_USERNAME=mysql_user
 DB_PASSWORD=secret
 DB_HOST=mysql-server
+DB_PORT=3306
 
 IGNORE_COLUMNS=password,hidden_column,another_column
